Fri May  2 07:47:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Monitor/Bytes_Sent/bytes_sent.cpp
        * examples/Monitor/Constraint/constraint.cpp
        * examples/Monitor/CPU_Load/cpu_load.cpp
        * examples/Monitor/Group/group.cpp
        * examples/Monitor/Memory_Usage/memory_usage.cpp
        * examples/Monitor/Message_Queue_Size/message_queue_size.cpp
        * examples/Monitor/Num_Threads/num_threads.cpp
          Updated include

        * examples/Monitor/Bytes_Sent/Bytes_Sent.mpc
        * examples/Monitor/Constraint/Constraint.mpc
        * examples/Monitor/Num_Threads/Num_Threads.mpc
        * examples/Monitor/Group/Group.mpc
        * examples/Monitor/CPU_Load/CPU_Load.mpc
        * examples/Monitor/Message_Queue_Size/Message_Queue_Size.mpc
          Don't build with ace_for_tao

Thu May  1 22:35:17 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/MonitorControl/MonitorControl.mpc:
        * bin/MakeProjectCreator/config/ace_mc.mpb:
          Avoid wince - it lacks the needed PDH capability.

Thu May  1 18:27:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/MonitorControl/MonitorControl.mpc:
        * bin/MakeProjectCreator/config/ace_mc.mpb:
          Use ACE_MonitorControl as shared library name

Thu May  1 17:31:01 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp: Removed an assert guarding the case when
        the current thread has no associated configuration context. Added
        code that would initialize the thread's configuration context with
        the global, instead. This addresses bug# 3315.

Thu May  1 17:11:48 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/ace.mwc:

          Added MonitorControl directory to the workspace.

Thu May  1 17:05:37 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/MonitorControl/PacketsSentMonitor.h:
        * ace/MonitorControl/WindowsMultiInstanceMonitor.cpp: